kubernetes/apps/default/reverse-proxy/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Ingress
    gethomepage.dev/icon: gitlab.png
    gethomepage.dev/name: Gitlab
  name: gitlab
spec:
  ingressClassName: internal
  rules:
    - host: gitlab.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: gitlab
                port:
                  number: 8010
            path: /
            pathType: Prefix
          - backend:
              service:
                name: gitlab
                port:
                  number: 22
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gitlab.${SECRET_DOMAIN}
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
spec:
  ports:
    - port: 8010
      protocol: TCP
      targetPort: 8010
      name: web
    - port: 22
      protocol: TCP
      targetPort: 2424
      name: ssh
---
apiVersion: v1
kind: Endpoints
metadata:
  name: gitlab
subsets:
  - addresses:
      - ip: ${SECRET_OMV_LOKI_ADDRESS}
    ports:
      - port: 8010
        protocol: TCP
        name: web
      - port: 2424
        protocol: TCP
        name: ssh
